<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/nunito_semi_bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="120dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_us_confirm_the_beautiful_moments"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_image"
        android:layout_marginTop="25dp"/>
    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="@string/create_new_account"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:onClick="goToSignUpActivity"/>
    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button_background"
        android:text="@string/login"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_semi_bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:onClick="goToLoginActivity"/>
</LinearLayout>
