<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:background="@android:color/white">
    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/header_image"/>
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/home_image"
                    android:layout_width="73dp"
                    android:layout_height="73dp"
                    android:background="@drawable/ic_user_image"
                    android:adjustViewBounds="true"
                    app:civ_border_color="@android:color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"/>
            </FrameLayout>
            <TextView
                android:id="@+id/home_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Guest_user"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_semi_bold"
                android:textColor="@android:color/black" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#707070"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/menu_account_item"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/My_Profile"
                android:paddingStart="35dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:background="?selectableItemBackground"
                android:onClick="menuItemClickListener"/>
            <TextView
                android:id="@+id/menu_orders_item"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Orders"
                android:paddingStart="35dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:background="?selectableItemBackground"
                android:onClick="menuItemClickListener"/>
            <TextView
                android:id="@+id/menu_about_us_item"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/About_us"
                android:paddingStart="35dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:background="?selectableItemBackground"
                android:onClick="menuItemClickListener"/>
            <TextView
                android:id="@+id/menu_contact_us_item"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contact_us"
                android:paddingStart="35dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:background="?selectableItemBackground"
                android:onClick="menuItemClickListener"/>
            <TextView
            android:id="@+id/menu_settings_item"
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:paddingStart="35dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:background="?selectableItemBackground"
            android:onClick="menuItemClickListener"/>
            <TextView
                android:id="@+id/menu_login_item"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:paddingStart="35dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:background="?selectableItemBackground"
                android:onClick="menuItemClickListener"/>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   android:gravity="bottom">
                   <TextView
                       android:id="@+id/menu_logout_item"
                       android:paddingVertical="10dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/Logout"
                       android:paddingStart="35dp"
                       android:textSize="20sp"
                       android:textColor="@android:color/black"
                       android:background="?selectableItemBackground"
                       android:onClick="menuItemClickListener"
                       android:layout_marginBottom="50dp"/>
               </LinearLayout>
        </LinearLayout>
        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
