<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ContactUsActivity"
    android:background="@android:color/white"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:tint="@android:color/black"
                android:paddingHorizontal="5dp"
                android:background="?selectableItemBackground"
                android:onClick="back"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contact_us"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@android:color/black" />
        </FrameLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_contact_us_image"/>
        <EditText
            android:id="@+id/contact_us_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:textSize="13sp"
            android:textColorHint="#80000833"
            android:textColor="#000833"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:background="@drawable/contact_us_edit_text_background"
            android:layout_marginHorizontal="15dp"
            android:textAlignment="viewStart"/>
        <EditText
            android:id="@+id/contact_us_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_address"
            android:textSize="13sp"
            android:textColorHint="#80000833"
            android:textColor="#000833"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:background="@drawable/contact_us_edit_text_background"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:textAlignment="viewStart"/>
        <EditText
            android:id="@+id/contact_us_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:textSize="13sp"
            android:textColorHint="#80000833"
            android:textColor="#000833"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:background="@drawable/contact_us_edit_text_background"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/contact_us_message"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:hint="@string/Message_Text"
            android:textSize="13sp"
            android:textColorHint="#80000833"
            android:textColor="#000833"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:gravity="top"
            android:background="@drawable/contact_us_edit_text_background"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:maxLines="9"
            android:scrollbars = "vertical"
            android:textAlignment="viewStart"
            />
        <Button
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="@string/send"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:onClick="sendMessage"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>
    </LinearLayout>

</ScrollView>