<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.circularreveal.cardview.CircularRevealCardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_added_successfully"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/nunito_semi_bold"
                android:textColor="@android:color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <Button
                    android:id="@+id/dialog_cart_shopping"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/Keep_shopping"
                    android:textSize="18sp"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"/>
                <Button
                    android:id="@+id/dialog_cart_go"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background"
                    android:text="@string/go_to_cart"
                    android:textSize="18sp"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

</FrameLayout>